# ira

./: .env.example  .gitignore  .mailmap  CLAUDE.md  LICENSE  README.md  Taskfile.yaml  hello.py  pyproject.toml
api/: app.py  hello.py  pyproject.toml
core/: pyproject.toml
core/core/: __init__.py  chunking.py  concurrency.py  config.py  factory.py  templates.py
core/core/adapters/: __init__.py
core/core/adapters/document_store/: __init__.py  local.py
core/core/adapters/embedding/: __init__.py  fake.py  gemini.py  gemini_batch.py
core/core/adapters/fusion/: __init__.py  rrf.py  weighted_sum.py
core/core/adapters/search_backend/: __init__.py  local.py
core/core/adapters/translation/: __init__.py  fake.py  gemini.py
core/core/adapters/translation/templates/: translate.md
core/core/domain/: __init__.py  models.py
core/core/ports/: __init__.py  document_store.py  embedding.py  fusion.py  search_backend.py  translation.py
core/core/search/: __init__.py  models.py  service.py
pipeline/: .gitignore  README.md  app.py  pyproject.toml
pipeline/pipeline/: __init__.py  cli.py
pipeline/pipeline/stages/: __init__.py  embed.py  index.py  ingest.py  translate.py
pipeline/scrapy/: scrapy.cfg
pipeline/scrapy/spiders/: extensions.py  settings.py
pipeline/scrapy/spiders/spiders/: gitabitan.py  schema.py
pipeline/scripts/: item_dump.py  item_translate.py  item_transliterate.py  item_vectorize.py
pipeline/utils/: tokenizer.py  utils.py
web/: .gitconfig  .npmrc  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
web/.husky/: pre-commit
web/src/app/: PostHogProvider.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/lyric/: page-content.tsx  page.tsx
web/src/components/: footer.tsx  search.tsx
web/src/constants/: index.ts
web/src/hooks/: index.ts  useScreenSize.ts
web/src/utils/: index.ts
(+3 files in other folders)
