[project]
name = "core"
version = "0.1.0"
description = "ira — shared domain, ports, adapters, and search core"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.6.0",
    "numpy>=1.26",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.0",
    "structlog>=25.3.0",
    "tenacity>=9.0",
    "tiktoken>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
