[project]
name = "ira-pipeline"
version = "0.1.0"
author = "Manas Pratim Biswas <manaspb2405@gmail.com>"
description = "Ira, one lyric at a time"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "ftfy>=6.3.1",
    "pydantic>=2.11.4",
    "scrapy>=2.12.0",
    "structlog>=25.3.0",
    "tiktoken>=0.9.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
