[project]
name = "pipeline"
version = "0.1.0"
author = "Manas Pratim Biswas <manaspb2405@gmail.com>"
description = "ira — scraping + offline ETL (ingest, translate, embed, index)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
    "bleach>=6.2.0",
    "ftfy>=6.3.1",
    "scrapy>=2.12.0",
    "structlog>=25.3.0",
    "tiktoken>=0.9.0",
    "transformers>=4.51.3",
]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
